--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="img/logo_clear.png" rel="shortcut icon" type="image/x-icon">
     <title>박지영입니다</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -16,16 +17,23 @@
     <div id="wrap">
         <header>
             <div class="nav">
-                <h1><a href="#">
-                    <!-- <img src="img/logo.jpg" alt="로고"></a> -->
+                <h1>
+                    <a href="#">로고</a>
                 </h1>
+                <ul class="navSns">
+                    <li><a href="https://blog.naver.com/jisu721itzy212" target="_blank">blog</a></li>
+                    <li><a href="https://github.com/zhwltlr" target="_blank" >github</a></li>
+                    <li><a href="#">instagram</a></li>
+                    <li><a href="mailto:vyoyngv7340@gmail.com">email</a></li>
+                </ul>
             </div>
         </header>
 
         <div id="main">
             <section id="video">
+                <h2 class="blind">제목</h2>
                 <!-- 소개영상 -->
-                <div class="infoVid" align = 'center'>
+                <div class="infoVid">
                     <video controls="controls" poster="img/thumnail.jpg" class="video-js vjs-big-play-centered" data-setup='{}'>
                         <source src="img/infovid_ff.mp4" type="video/mp4" />   
                         이 브라우저에서 지원하지 않는 영상입니다.
@@ -35,12 +43,11 @@
     
             <!-- 개인 사이트 -->
             <section id="mysite" class="clearfix">
+                <h2 class="blind">제목</h2>
                 <div class="repository">
                     <div class="blog">
                         <div class="blogImg">
-                            <a href="https://blog.naver.com/jisu721itzy212" target="_blank" title="블로그 방문하기" >
-                                <img src="img/s_zhwltlr.png" alt="blog">
-                            </a>
+                            <a href="https://blog.naver.com/jisu721itzy212" target="_blank" title="블로그 방문하기" ><img src="img/s_zhwltlr.png" alt="blog"></a>
                         </div>
                         <div class="blogText">
                             <p>성장 기록 남기는 개발 블로그 입니다</p>
@@ -90,12 +97,10 @@
     
                     <div class="quemore">
                         <h3><img src="img/search.png" alt="QM"> 더 궁금한 사항이 있으신가요?</h3>
-                        <span>
-                            <form>
-                                <input type="text" name="question" placeholder="궁금한 점 남겨주시면 답변해드릴게요">
-                                <input type="submit" class="btn btn-primary" value="전송"></form>
-                            </form>
-                        </span>
+                        <form>
+                            <input type="text" name="question" placeholder="궁금한 점 남겨주시면 답변해드릴게요">
+                            <input type="submit" class="btn btn-primary" value="전송">
+                        </form>
                     </div>
                 </div>
             </section>
@@ -149,7 +154,7 @@
                 <div class="fContent">
                     <ul>
                         <li>Thank you for visiting my site</li>
-                        <li><a href="mailto: vyoyngv7340@gmail.com"><img src="img/mail.png" width="22px" alt="mail">  zhwltlr에게 이메일 보내기</a></li>
+                        <li><a href="mailto:vyoyngv7340@gmail.com"><img src="img/mail.png" alt="mail">  zhwltlr에게 이메일 보내기</a></li>
                     </ul>
 
                     <div class="fSite">
